NIFI-250: - Making the new controller services table collapsible. - Addressing issues with filtering, rollup, tags, and collapsing.

--- a/nifi/nar-bundles/framework-bundle/framework/web/nifi-web-ui/src/main/webapp/css/settings.css
+++ b/nifi/nar-bundles/framework-bundle/framework/web/nifi-web-ui/src/main/webapp/css/settings.css
@@ -14,6 +14,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 #settings {
     position: absolute;
     top: 0px;
@@ -46,6 +47,15 @@ span.expansion-button {
     width: 10px;
     height: 10px;
     float: left;
+}
+
+span.ancestor-type {
+    font-weight: bold;
+}
+
+span.ancestor-type-rollup {
+    margin-left: 3px;
+    color: #aaa;
 }
 
 /* settings tabs */
